--- a/about.html
+++ b/about.html
@@ -29,8 +29,8 @@
               <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="index.html">Home</a>
               </li>
-              <li class="nav-item active">
-                <a class="nav-link" href="#">About Us</a>
+              <li class="nav-item">
+                <a class="nav-link active" href="#">About Us</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="offcanvasNavbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
